--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,12 @@
 		<version>1.18.8</version>
 		<scope>provided</scope>
 	</dependency>
-
+	
+<dependency>
+  <groupId>com.google.guava</groupId>
+  <artifactId>guava</artifactId>
+  <version>27.1-jre</version>
+</dependency>
 	</dependencies>
 
 	<build>
