--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# Logging
+logging.level.com.mozzartbet.gameservice.mapper=TRACE
+logging.level.org.mybatis=TRACE
+logging.level.org.springframework.boot.autoconfigure.jdbc=TRACE
+logging.level.org.springframework.jdbc=TRACE
 
+# MyBatis
+
+mybatis.type-aliases-package=com.mozzartbet.gameservice.domain
