--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,10 @@ logging.level.org.springframework.boot.autoconfigure.jdbc=TRACE
 logging.level.org.springframework.jdbc=TRACE
 
 # MyBatis
-
 mybatis.type-aliases-package=com.mozzartbet.gameservice.domain
+
+mybatis.configuration.jdbc-type-for-null=NULL
+
+
+#spring.profiles.active=oracle
+
